# OpenCV_Cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01_Image_Basics/: 01_imread.cpp  02_grayscale.cpp  03_imwrite.cpp  04_MatUnderstand.cpp  05_resize.cpp  06_rotate.cpp  08_brightness.cpp  Directory.Build.props  Image_Basics.sln  README.md
01_Image_Basics/01_Imread/: 01_Imread.cpp  Project1.vcxproj  Project1.vcxproj.filters
01_Image_Basics/02_Grayscale/: 02_Grayscale.cpp  02_Grayscale.vcxproj  02_Grayscale.vcxproj.filters
01_Image_Basics/03_Imwrite/: 03_Imwrite.cpp  03_Imwrite.vcxproj  03_Imwrite.vcxproj.filters
01_Image_Basics/04_MatUnderstanding/: 04_MatUnderstanding.cpp  04_MatUnderstanding.vcxproj  04_MatUnderstanding.vcxproj.filters
01_Image_Basics/05_Resize/: 05_Resize.cpp  05_Resize.vcxproj  05_Resize.vcxproj.filters
01_Image_Basics/06_Rotate/: 06_Rotate.cpp  06_Rotate.vcxproj  06_Rotate.vcxproj.filters
01_Image_Basics/07_ROI/: 07_ROI.cpp  07_ROI.vcxproj  07_ROI.vcxproj.filters
01_Image_Basics/08_Brightness/: 08_Brightness.cpp  08_Brightness.vcxproj  08_Brightness.vcxproj.filters
02_Installation_Setup/: 01_blur.cpp  02_Installation_Setup.sln
02_Installation_Setup/01_blur/: 01_blur.cpp  Project1.vcxproj  Project1.vcxproj.filters
